# sinapis

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.actor  Dockerfile.debug  Makefile.toml  README.md  build.rs  local_ci.py  makefile  package.json  private.pem  public.pem  rust-toolchain.toml  wadm.yaml  wasmcloud.toml
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: rust.yml
aggregation-gateway/: Cargo.toml  tailwind.config.js
aggregation-gateway/src/: fallback.rs  lib.rs  main.rs  middleware.rs  route.rs
aggregation-gateway/src/core/: response.rs  state.rs
aggregation-gateway/src/service/: frontend_base_service.rs  mod.rs  person_center.rs
crypto_tool/: Cargo.toml
crypto_tool/src/: main.rs
dapr_actor_interface/: __init__.py  actor.py  parameter_analysis_actor_interface.py
end2end/: package.json
entity/: .env  Cargo.toml
entity/src/: auth.rs  graph.rs  lib.rs  middleware.rs  organization.rs  permission.rs  policy.rs  prelude.rs  resource_type.rs  role.rs  role_parent.rs  role_permission.rs  role_policy.rs  sea_orm_active_enums.rs  state.rs  user_info.rs  user_property.rs  user_role.rs
entity/src/entities/: auth.rs  graph_model.rs  middleware.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  user_info.rs  user_property.rs
frontend-base-service/: Cargo.toml
frontend-base-service/src/: controller.rs  helper.rs  main.rs  service.rs
identification/: Cargo.toml
identification/src/: lib.rs
identification/wit/: world.wit
identification_plugin/: Cargo.toml
identification_plugin/src/: lib.rs
idgen/: Cargo.toml
idgen/src/: lib.rs
idgen/src/core/: default_id_generator.rs  i_snow_worker.rs  id_generator_options.rs  id_helper.rs  mod.rs  over_cost_action_arg.rs  snow_worker.rs
layer/: Cargo.toml
layer/src/: auth.rs  lib.rs  middleware.rs  neo4j.rs  postgres.rs
macros/: Cargo.toml
macros/src/: lib.rs
manifest/: aggregation-gateway.yaml  person-center.yaml
manifests/: aggregation-gateway.yaml  frontend-base-service.yaml  parameter_analysis_actor.yaml  person-center.yaml
migration/: .env  Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230822_141832_add_tabel.rs  utils.rs
parameter-analysis/: Dockerfile  README.md  main.py  parameter_analysis.py  requirements.txt
person-center/: Cargo.toml
person-center/src/: controller.rs  helper.rs  main.rs  service.rs  service1.rs  utils.rs
person-center/src/controller/: mod.rs  user.rs  user_attribute.rs
person-center/src/service/: user.rs  user_attribute.rs
pool/: Cargo.toml
pool/src/: age.rs  lib.rs
pool/src/dapr/: mod.rs  person_center.rs
pool/src/grpc/: person_center.rs
proto/: association.proto  frontend_base_service.proto  organization.proto  permission.proto  policy.proto  policy_machine.proto  resource_type.proto  role.proto  universal.proto  user.proto  user_attribute.proto
proxy/: Cargo.toml
proxy/src/: main.rs
src/: app.rs  lib.rs  main.rs  route.rs  server.rs
src/core/: mod.rs
src/service/: frontend_base_service.rs
utils/: Cargo.toml
utils/src/: cql_handle.rs  data_handle.rs  encryption.rs  lib.rs
volo-gen/: Cargo.toml  build.rs  volo.yml
wit/: world.wit
