[package]
name = "aggregation-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volo-gen = { path = "../volo-gen" }

serde_json = { workspace = true }
axum = { workspace = true }
dapr = { workspace = true }
anyhow = { workspace = true }
mime = { workspace = true }
axum-macros = { workspace = true }
pilota = { workspace = true }
prost-types = { workspace = true }

serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
