[package]
name = "entity"
version = {workspace = true}
edition = {workspace = true}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apache_age = { workspace = true }
sonic-rs = { workspace = true }
serde_json = { workspace = true }
pilota = { workspace = true }
volo-grpc = { workspace = true }
regex = { workspace = true }
tokio-postgres = { workspace = true }

serde = { workspace = true, features = ["rc", "derive"] }
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-json",
    "postgres-array",
] }
chrono = { workspace = true, features = ["serde"] }

# pool = { path = "../pool" }
