[package]
name = "frontend-base-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volo-gen = { path = "../volo-gen" }

volo = { workspace = true }
volo-grpc = { workspace = true }
serde_json= { workspace = true }
serde_yaml= { workspace = true }

nacos-sdk = { workspace = true, features = ["async"] }
tokio = { workspace = true, features = ["full"] }
