[package]
name = "frontend-base-service"
version = {workspace = true}
edition = {workspace = true}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volo-gen = { path = "../volo-gen" }

volo = { workspace = true }
volo-grpc = { workspace = true }
serde_json= { workspace = true }
serde_yaml= { workspace = true }

nacos-sdk = { workspace = true, features = ["default"] }
tokio = { workspace = true, features = ["sync", "macros", "io-util", "rt", "time"] }
