[package]
name = "identification"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = { workspace = true }
wit-bindgen = { workspace = true }
http = { workspace = true }
wasmcloud-component = { workspace = true }

chrono = { workspace = true, features = ["serde"] }
