[package]
name = "layer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volo = { workspace = true }
volo-grpc = { workspace = true }
neo4rs = { workspace = true }

nacos-sdk = { workspace = true, features = ["async"] }
sea-orm = { workspace = true, features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-time", "with-json", "postgres-array"] }
tokio = { workspace = true, features = ["full"] }
