[package]
name = "layer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volo = { workspace = true }
volo-grpc = { workspace = true }
axum = { workspace = true }
http-body = { workspace = true }
bytes = { workspace = true }
pin-project = { workspace = true }
anyhow = { workspace = true }
lazy_static = { workspace = true }

tower = { workspace = true, features = ["util"] }
nacos-sdk = { workspace = true, features = ["async"] }
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
    "with-time",
    "with-json",
    "postgres-array",
] }
tokio = { workspace = true, features = ["full"] }
chrono = { workspace = true, features = ["serde"] }
jsonwebtoken = { workspace = true, features = ["use_pem"] }
cookie = { workspace = true, features = ["secure", "percent-encode"] }

entity = { path = "../entity" }
