[package]
name = "person-center"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }
utils = { path = "../utils" }
layer = { path = "../layer" }
volo-gen = { path = "../volo-gen" }

volo = { workspace = true }
volo-grpc = { workspace = true }
serde_json = { workspace = true }
pilota = { workspace = true }
chrono = { workspace = true }

sea-orm = { workspace = true, features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-time", "with-json", "postgres-array"] }
tokio = { workspace = true, features = ["full"] }
