[package]
name = "pool"
version = "0.1.0"
edition = "2021"

[dependencies]
bb8 = { workspace = true }
redis = {workspace = true, features = ["aio", "json"] }
# volo = { workspace = true }
# dapr = { workspace = true }
axum = { workspace = true }

# tokio = { workspace = true, features = ["full"] }

# volo-gen = { path = "../volo-gen" }
