[package]
name = "pool"
version = {workspace = true}
edition = {workspace = true}

[dependencies]
# volo = { workspace = true }
# dapr = { workspace = true }
axum = { workspace = true }
tokio-postgres = { workspace = true }
apache_age = { workspace = true }
bb8 = { workspace = true }

redis = { workspace = true, features = ["aio", "json"] }
sea-orm = { workspace = true, features = ["sqlx-postgres"] }
tokio = { workspace = true, features = ["sync", "macros", "io-util", "rt", "time"] }

volo-gen = { path = "../volo-gen" }
