[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volo-gen = { path = "../volo-gen" }

serde_json = { workspace = true }
chrono = { workspace = true }
argon2 = { workspace = true, features = ["alloc", "password-hash"] }
