[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { workspace = true }
chrono = { workspace = true }
volo-grpc = { workspace = true }
sonic-rs = { workspace = true }
pilota = { workspace = true }

argon2 = { workspace = true, features = ["alloc", "password-hash"] }

entity = { path="../entity" }
pool = { path="../pool" }
volo-gen = { path = "../volo-gen" }
