[package]
name = "volo-gen"
version = {workspace = true}
edition = {workspace = true}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volo = { workspace = true }
volo-grpc = { workspace = true }
pilota = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

tokio = { workspace = true, features = ["sync", "macros", "io-util", "rt", "time"] }

[build-dependencies]
volo-build = { workspace = true }
